@@ -8,6 +8,7 @@
 package io.harness.cdng.creator.plan.environment;
 
 import static io.harness.rule.OwnerRule.PRASHANTSHARMA;
+import static io.harness.rule.OwnerRule.YOGESH;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -17,14 +18,20 @@ import io.harness.category.element.UnitTests;
 import io.harness.cdng.CDNGTestBase;
 import io.harness.cdng.environment.steps.EnvironmentStepParameters;
 import io.harness.cdng.environment.yaml.EnvironmentPlanCreatorConfig;
+import io.harness.ng.core.environment.beans.Environment;
+import io.harness.ng.core.environment.yaml.NGEnvironmentConfig;
+import io.harness.ng.core.environment.yaml.NGEnvironmentInfoConfig;
+import io.harness.ng.core.serviceoverride.yaml.NGServiceOverrideConfig;
+import io.harness.ng.core.serviceoverride.yaml.NGServiceOverrideInfoConfig;
 import io.harness.pms.yaml.ParameterField;
 import io.harness.rule.Owner;
 import io.harness.steps.environment.EnvironmentOutcome;
 import io.harness.yaml.core.variables.NGServiceOverrides;
+import io.harness.yaml.core.variables.NumberNGVariable;
 import io.harness.yaml.core.variables.StringNGVariable;
 
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
@@ -67,22 +74,26 @@ public class EnvironmentMapperTest extends CDNGTestBase {
             .name("name")
             .identifier("identifier")
             .description("description")
-            .serviceOverrides(
-                NGServiceOverrides.builder()
-                    .serviceRef("ser")
-                    .variables(Collections.singletonList(StringNGVariable.builder()
-                                                             .name("name")
-                                                             .value(ParameterField.createValueField("value"))
-                                                             .build()))
-                    .build())
+            .serviceOverrideConfig(NGServiceOverrideConfig.builder()
+                                       .serviceOverrideInfoConfig(
+                                           NGServiceOverrideInfoConfig.builder()
+                                               .serviceRef("ser")
+                                               .variables(List.of(StringNGVariable.builder()
+                                                                      .name("name")
+                                                                      .value(ParameterField.createValueField("value"))
+                                                                      .build()))
+                                               .build())
+                                       .build())
             .build();
+
     EnvironmentStepParameters environmentStepParameters =
         EnvironmentMapper.toEnvironmentStepParameters(environmentPlanCreatorConfig);
     assertThat(environmentStepParameters.getEnvironmentRef().getValue()).isEqualTo("ref");
     assertThat(environmentStepParameters.getIdentifier()).isEqualTo("identifier");
     assertThat(environmentStepParameters.getName()).isEqualTo("name");
     assertThat(environmentStepParameters.getDescription()).isEqualTo("description");
-    assertThat(environmentStepParameters.getServiceOverrides().size()).isEqualTo(1);
+    assertThat(environmentStepParameters.getServiceOverrides().values().size()).isEqualTo(1);
+    assertThat(environmentStepParameters.getVariables().values().size()).isEqualTo(0);
   }
 
   @Test
@@ -112,5 +123,106 @@ public class EnvironmentMapperTest extends CDNGTestBase {
     assertThat(resultedVariables.get("val2")).isEqualTo("value2");
     assertThat(resultedVariables.get("val3")).isEqualTo("value3");
     assertThat(resultedVariables.get("val4")).isEqualTo("value4");
+  }
+
+  @Test
+  @Owner(developers = YOGESH)
+  @Category(UnitTests.class)
+  public void testOverridesInOutcome_1() {
+    Environment envEntity = Environment.builder().build();
+    NGEnvironmentConfig env =
+        NGEnvironmentConfig.builder()
+            .ngEnvironmentInfoConfig(
+                NGEnvironmentInfoConfig.builder()
+                    .variables(List.of(
+                        StringNGVariable.builder().name("var1").value(ParameterField.createValueField("val1")).build(),
+                        NumberNGVariable.builder().name("var2").value(ParameterField.createValueField(4d)).build(),
+                        NumberNGVariable.builder().name("var3").value(ParameterField.createValueField(9d)).build()))
+                    .build())
+            .build();
+    NGServiceOverrideConfig svcOverride =
+        NGServiceOverrideConfig.builder()
+            .serviceOverrideInfoConfig(
+                NGServiceOverrideInfoConfig.builder()
+                    .variables(List.of(StringNGVariable.builder()
+                                           .name("var1")
+                                           .value(ParameterField.createValueField("svcoverrideval1"))
+                                           .build(),
+                        NumberNGVariable.builder().name("var2").value(ParameterField.createValueField(16d)).build()))
+                    .build())
+            .build();
+
+    EnvironmentOutcome outcome = EnvironmentMapper.toEnvironmentOutcome(envEntity, env, svcOverride);
+
+    assertThat(((ParameterField) outcome.getVariables().get("var1")).getValue()).isEqualTo("svcoverrideval1");
+    assertThat(((ParameterField) outcome.getVariables().get("var2")).getValue()).isEqualTo(16.0);
+    assertThat(((ParameterField) outcome.getVariables().get("var3")).getValue()).isEqualTo(9.0);
+  }
+
+  @Test
+  @Owner(developers = YOGESH)
+  @Category(UnitTests.class)
+  public void testOverridesInOutcome_2() {
+    Environment envEntity = Environment.builder().build();
+    NGEnvironmentConfig env =
+        NGEnvironmentConfig.builder().ngEnvironmentInfoConfig(NGEnvironmentInfoConfig.builder().build()).build();
+    NGServiceOverrideConfig svcOverride =
+        NGServiceOverrideConfig.builder()
+            .serviceOverrideInfoConfig(
+                NGServiceOverrideInfoConfig.builder()
+                    .variables(List.of(StringNGVariable.builder()
+                                           .name("var1")
+                                           .value(ParameterField.createValueField("svcoverrideval1"))
+                                           .build(),
+                        NumberNGVariable.builder().name("var2").value(ParameterField.createValueField(16d)).build()))
+                    .build())
+            .build();
+
+    EnvironmentOutcome outcome = EnvironmentMapper.toEnvironmentOutcome(envEntity, env, svcOverride);
+
+    assertThat(((ParameterField) outcome.getVariables().get("var1")).getValue()).isEqualTo("svcoverrideval1");
+    assertThat(((ParameterField) outcome.getVariables().get("var2")).getValue()).isEqualTo(16.0);
+  }
+
+  @Test
+  @Owner(developers = YOGESH)
+  @Category(UnitTests.class)
+  public void testOverridesInOutcome_3() {
+    Environment envEntity = Environment.builder().build();
+    NGEnvironmentConfig env =
+        NGEnvironmentConfig.builder()
+            .ngEnvironmentInfoConfig(
+                NGEnvironmentInfoConfig.builder()
+                    .variables(List.of(
+                        StringNGVariable.builder().name("var1").value(ParameterField.createValueField("val1")).build(),
+                        NumberNGVariable.builder().name("var2").value(ParameterField.createValueField(4d)).build(),
+                        NumberNGVariable.builder().name("var3").value(ParameterField.createValueField(9d)).build()))
+                    .build())
+            .build();
+    NGServiceOverrideConfig svcOverride = NGServiceOverrideConfig.builder()
+                                              .serviceOverrideInfoConfig(NGServiceOverrideInfoConfig.builder().build())
+                                              .build();
+
+    EnvironmentOutcome outcome = EnvironmentMapper.toEnvironmentOutcome(envEntity, env, svcOverride);
+
+    assertThat(((ParameterField) outcome.getVariables().get("var1")).getValue()).isEqualTo("val1");
+    assertThat(((ParameterField) outcome.getVariables().get("var2")).getValue()).isEqualTo(4.0);
+    assertThat(((ParameterField) outcome.getVariables().get("var3")).getValue()).isEqualTo(9.0);
+  }
+
+  @Test
+  @Owner(developers = YOGESH)
+  @Category(UnitTests.class)
+  public void testOverridesInOutcome_4() {
+    Environment envEntity = Environment.builder().build();
+    NGEnvironmentConfig env =
+        NGEnvironmentConfig.builder().ngEnvironmentInfoConfig(NGEnvironmentInfoConfig.builder().build()).build();
+    NGServiceOverrideConfig svcOverride = NGServiceOverrideConfig.builder()
+                                              .serviceOverrideInfoConfig(NGServiceOverrideInfoConfig.builder().build())
+                                              .build();
+
+    EnvironmentOutcome outcome = EnvironmentMapper.toEnvironmentOutcome(envEntity, env, svcOverride);
+
+    assertThat(outcome.getVariables()).isEmpty();
   }
 }
