@@ -11,9 +11,12 @@ import static io.harness.annotations.dev.HarnessModule._955_ACCOUNT_MGMT;
 import static io.harness.annotations.dev.HarnessTeam.PL;
 import static io.harness.data.structure.UUIDGenerator.generateUuid;
 import static io.harness.rule.OwnerRule.ANKIT;
+import static io.harness.rule.OwnerRule.BHAVYA;
+import static io.harness.rule.OwnerRule.BOOPESH;
 import static io.harness.rule.OwnerRule.BRETT;
 import static io.harness.rule.OwnerRule.DEEPAK;
 import static io.harness.rule.OwnerRule.HANTANG;
+import static io.harness.rule.OwnerRule.JOHANNES;
 import static io.harness.rule.OwnerRule.LAZAR;
 import static io.harness.rule.OwnerRule.MEHUL;
 import static io.harness.rule.OwnerRule.MOHIT;
@@ -43,6 +46,7 @@ import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.fail;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Matchers.any;
 import static org.mockito.Matchers.anyString;
 import static org.mockito.Mockito.mock;
@@ -114,7 +118,6 @@ import software.wings.security.UserThreadLocal;
 import software.wings.service.impl.AccountServiceImpl;
 import software.wings.service.impl.analysis.CVEnabledService;
 import software.wings.service.impl.security.auth.AuthHandler;
-import software.wings.service.intfc.AccountService;
 import software.wings.service.intfc.AppService;
 import software.wings.service.intfc.AuthService;
 import software.wings.service.intfc.DelegateProfileService;
@@ -146,6 +149,7 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 import org.apache.commons.lang3.reflect.FieldUtils;
 import org.junit.Before;
+import org.junit.Ignore;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
@@ -177,7 +181,7 @@ public class AccountServiceTest extends WingsBaseTest {
   @Mock(answer = Answers.RETURNS_DEEP_STUBS) private MainConfiguration configuration;
 
   @InjectMocks @Inject private LicenseService licenseService;
-  @InjectMocks @Inject private AccountService accountService;
+  @InjectMocks @Inject private AccountServiceImpl accountService;
   @InjectMocks @Inject private UserResource userResource;
   @InjectMocks @Inject private AccountResource accountResource;
   @Mock private AuthHandler authHandler;
@@ -262,6 +266,7 @@ public class AccountServiceTest extends WingsBaseTest {
                 CgServiceUsage.builder().name("svc1").serviceId("svcId").instanceCount(1).licensesUsed(1).build()))
             .build();
     when(cgCdLicenseUsageService.getActiveServiceLicenseUsage(anyString())).thenReturn(cgActiveServicesUsageInfo);
+    when(cgCdLicenseUsageService.getActiveServiceInTimePeriod(anyString(), anyInt())).thenReturn(5);
     Account account = setUpDataForTestingSetAccountStatusInternal(AccountType.PAID);
     when(featureFlagService.isEnabled(FeatureName.CG_LICENSE_USAGE, account.getUuid())).thenReturn(true);
 
@@ -272,6 +277,7 @@ public class AccountServiceTest extends WingsBaseTest {
     assertThat(details.isCreatedFromNG()).isEqualTo(false);
     assertThat(details.getLicenseInfo().getAccountType()).isEqualTo(AccountType.PAID);
     assertThat(details.getActiveServicesUsageInfo()).isSameAs(cgActiveServicesUsageInfo);
+    assertThat(details.getActiveServiceCount()).isEqualTo(5);
   }
 
   @Test
@@ -460,6 +466,7 @@ public class AccountServiceTest extends WingsBaseTest {
   @Test
   @Owner(developers = BRETT)
   @Category(UnitTests.class)
+  @Ignore("CI-6355: TI team to follow up")
   public void shouldDeleteAccount() {
     String accountId = wingsPersistence.save(anAccount().withCompanyName(HARNESS_NAME).build());
     accountService.delete(accountId);
@@ -586,17 +593,20 @@ public class AccountServiceTest extends WingsBaseTest {
   @Test
   @Owner(developers = SRINIVAS)
   @Category(UnitTests.class)
-  public void shouldListAllAccounts() {
+  public void shouldListSupportAccounts() {
     Account account = anAccount().withCompanyName(HARNESS_NAME).build();
     wingsPersistence.save(account);
     assertThat(accountService.get(account.getUuid())).isEqualTo(account);
-    assertThat(accountService.listAllAccounts()).isNotEmpty();
-    assertThat(accountService.listAccounts(Collections.emptySet())).isNotEmpty();
-    assertThat(accountService.listAllAccounts().get(0)).isNotNull();
-    assertThat(accountService.listAllAccountWithDefaultsWithoutLicenseInfo()).isNotEmpty();
-    assertThat(accountService.listAllAccountWithDefaultsWithoutLicenseInfo().get(0)).isNotNull();
-    assertThat(accountService.listAllAccountWithDefaultsWithoutLicenseInfo().get(0).getUuid())
-        .isEqualTo(account.getUuid());
+    assertThat(accountService.listHarnessSupportAccounts(Collections.emptySet(), null).get(0).getUuid()).isNotEmpty();
+    assertThat(accountService.listHarnessSupportAccounts(Collections.emptySet(), Set.of(AccountKeys.uuid))
+                   .get(0)
+                   .getAccountName())
+        .isNull();
+    assertThat(accountService.getAccountsWithBasicInfo(false)).isNotEmpty();
+    assertThat(accountService.getAccountsWithBasicInfo(false).get(0)).isNotNull();
+    assertThat(accountService.getAccountsWithBasicInfo(false)).isNotEmpty();
+    assertThat(accountService.getAccountsWithBasicInfo(false).get(0)).isNotNull();
+    assertThat(accountService.getAccountsWithBasicInfo(false).get(0).getUuid()).isEqualTo(account.getUuid());
     assertThat(accountService.listAllActiveAccounts()).isNotEmpty();
   }
 
@@ -873,6 +883,17 @@ public class AccountServiceTest extends WingsBaseTest {
     account = accountService.get(account.getUuid());
     assertThat(account.getWhitelistedDomains()).isEqualTo(Sets.newHashSet("harness.io"));
   }
+  @Test
+  @Owner(developers = BOOPESH)
+  @Category(UnitTests.class)
+  public void testUpdateWhitelistedDomainsShouldRemovePrefixes() {
+    String companyName = "CompanyName 1";
+    Account account = saveAccount(companyName);
+
+    accountService.updateWhitelistedDomains(account.getUuid(), Sets.newHashSet(" www.harness.io"));
+    account = accountService.get(account.getUuid());
+    assertThat(account.getWhitelistedDomains()).isEqualTo(Sets.newHashSet("harness.io"));
+  }
 
   @Test
   @Owner(developers = UJJAWAL)
@@ -1084,7 +1105,7 @@ public class AccountServiceTest extends WingsBaseTest {
     account.setHarnessSupportAccessAllowed(false);
     Account savedAccount = accountService.save(account, false);
 
-    assertThat(accountService.isRestrictedAccessEnabled(savedAccount.getUuid())).isTrue();
+    assertThat(accountService.isHarnessSupportAccessDisabled(savedAccount.getUuid())).isTrue();
   }
 
   @Test
@@ -1092,31 +1113,9 @@ public class AccountServiceTest extends WingsBaseTest {
   @Category(UnitTests.class)
   public void testAccountIteration() throws IllegalAccessException {
     final Account account = anAccount().withCompanyName(generateUuid()).build();
-    long serviceGuardDataCollectionIteration = random.nextLong();
-    FieldUtils.writeField(
-        account, AccountKeys.serviceGuardDataCollectionIteration, serviceGuardDataCollectionIteration, true);
-    long serviceGuardDataAnalysisIteration = random.nextLong();
-    FieldUtils.writeField(
-        account, AccountKeys.serviceGuardDataAnalysisIteration, serviceGuardDataAnalysisIteration, true);
+
     long workflowDataCollectionIteration = random.nextLong();
     FieldUtils.writeField(account, AccountKeys.workflowDataCollectionIteration, workflowDataCollectionIteration, true);
-
-    assertThat(account.obtainNextIteration(AccountKeys.serviceGuardDataCollectionIteration))
-        .isEqualTo(serviceGuardDataCollectionIteration);
-    assertThat(account.obtainNextIteration(AccountKeys.serviceGuardDataAnalysisIteration))
-        .isEqualTo(serviceGuardDataAnalysisIteration);
-    assertThat(account.obtainNextIteration(AccountKeys.workflowDataCollectionIteration))
-        .isEqualTo(workflowDataCollectionIteration);
-
-    serviceGuardDataCollectionIteration = random.nextLong();
-    account.updateNextIteration(AccountKeys.serviceGuardDataCollectionIteration, serviceGuardDataCollectionIteration);
-    assertThat(account.obtainNextIteration(AccountKeys.serviceGuardDataCollectionIteration))
-        .isEqualTo(serviceGuardDataCollectionIteration);
-
-    serviceGuardDataAnalysisIteration = random.nextLong();
-    account.updateNextIteration(AccountKeys.serviceGuardDataAnalysisIteration, serviceGuardDataAnalysisIteration);
-    assertThat(account.obtainNextIteration(AccountKeys.serviceGuardDataAnalysisIteration))
-        .isEqualTo(serviceGuardDataAnalysisIteration);
 
     workflowDataCollectionIteration = random.nextLong();
     account.updateNextIteration(AccountKeys.workflowDataCollectionIteration, workflowDataCollectionIteration);
@@ -1207,6 +1206,60 @@ public class AccountServiceTest extends WingsBaseTest {
   }
 
   @Test
+  @Owner(developers = JOHANNES)
+  @Category(UnitTests.class)
+  public void testCheckReservedSubdomainUrl() {
+    // no host
+    assertThatExceptionOfType(InvalidArgumentsException.class)
+        .isThrownBy(() -> accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://:abc/somepath")));
+
+    // empty or no first segment
+    assertThatExceptionOfType(InvalidArgumentsException.class)
+        .isThrownBy(() -> accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://whatisthis")));
+    assertThatExceptionOfType(InvalidArgumentsException.class)
+        .isThrownBy(() -> accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://.harness.io")));
+
+    // valid smoke test
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://customer.harness.io"))).isFalse();
+
+    // ensure casing doesn't matter
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://AgeNT.harness.io"))).isTrue();
+
+    // Go through list and ensure only exact match returns true
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://agent.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://aagent.harness.io"))).isFalse();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://agenta.harness.io"))).isFalse();
+
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://app.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://app0.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://app1234.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://app-1234.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://aapp.harness.io"))).isFalse();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://appa.harness.io"))).isFalse();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://app-lication.harness.io"))).isFalse();
+
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://qa.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://aqa.harness.io"))).isFalse();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://qaa.harness.io"))).isFalse();
+
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://pr.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://apr.harness.io"))).isFalse();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://pra.harness.io"))).isFalse();
+
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://stress.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://astress.harness.io"))).isFalse();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://stressa.harness.io"))).isFalse();
+
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://prod.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://prod0.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://prod1234.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://prod-1234.harness.io"))).isTrue();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://aprod.harness.io"))).isFalse();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://proda.harness.io"))).isFalse();
+    assertThat(accountService.checkReservedSubdomainUrl(new SubdomainUrl("https://prod-uction.harness.io"))).isFalse();
+  }
+
+  @Test
   @Owner(developers = MEHUL)
   @Category(UnitTests.class)
   public void testSetSubdomainUrl() {
@@ -1243,6 +1296,7 @@ public class AccountServiceTest extends WingsBaseTest {
     SubdomainUrl validUrl = new SubdomainUrl("https://domain.io");
     SubdomainUrl invalidUrl = new SubdomainUrl("domain.com");
     SubdomainUrl duplicateUrl = new SubdomainUrl("https://initialDomain.com");
+    SubdomainUrl reservedUrl = new SubdomainUrl("https://agent.harness.io");
     User user1 = User.Builder.anUser().uuid("userId1").name("name1").email("user1@harness.io").build();
     User user2 = User.Builder.anUser().uuid("userId2").name("name2").email("user2@harness.io").build();
     when(harnessUserGroupService.isHarnessSupportUser("userId1")).thenReturn(Boolean.FALSE);
@@ -1256,6 +1310,8 @@ public class AccountServiceTest extends WingsBaseTest {
         .isThrownBy(() -> accountService.addSubdomainUrl(user2.getUuid(), account2.getUuid(), invalidUrl));
     assertThatExceptionOfType(InvalidArgumentsException.class)
         .isThrownBy(() -> accountService.addSubdomainUrl(user2.getUuid(), account2.getUuid(), duplicateUrl));
+    assertThatExceptionOfType(InvalidArgumentsException.class)
+        .isThrownBy(() -> accountService.addSubdomainUrl(user2.getUuid(), account2.getUuid(), reservedUrl));
 
     Boolean result1 = accountService.addSubdomainUrl(user2.getUuid(), account2.getUuid(), validUrl);
     assertThat(wingsPersistence.get(Account.class, account2.getUuid()).getSubdomainUrl()).isEqualTo(validUrl.getUrl());
@@ -1435,5 +1491,34 @@ public class AccountServiceTest extends WingsBaseTest {
     Account account = saveAccount(generateUuid());
     boolean updated = accountService.updateAccountPreference(account.getUuid(), "thisKeyDoesntExist", new Integer(2));
     assertThat(updated).isFalse();
+  }
+
+  @Test
+  @Owner(developers = BHAVYA)
+  @Category(UnitTests.class)
+  public void test_checkIfMultipleAccountsExist() {
+    Account account = anAccount().withCompanyName(HARNESS_NAME).build();
+    wingsPersistence.save(account);
+    assertThat(accountService.doMultipleAccountsExist()).isEqualTo(false);
+    account = anAccount().withCompanyName("test").build();
+    wingsPersistence.save(account);
+    assertThat(accountService.doMultipleAccountsExist()).isEqualTo(true);
+  }
+
+  @Test
+  @Owner(developers = BHAVYA)
+  @Category(UnitTests.class)
+  public void test_listAllAccountsDTO() {
+    Account account = anAccount()
+                          .withCompanyName(HARNESS_NAME)
+                          .withAccountName("Account Name 1")
+                          .withAccountKey("ACCOUNT_KEY")
+                          .withDefaultExperience(DefaultExperience.CG)
+                          .withNextGenEnabled(true)
+                          .withGlobalDelegateAccount(false)
+                          .build();
+    wingsPersistence.save(account);
+    assertThat(accountService.getAllAccounts().get(0).getDefaultExperience()).isEqualTo(DefaultExperience.CG);
+    assertThat(accountService.getAllAccounts().get(0).getCompanyName()).isEqualTo(HARNESS_NAME);
   }
 }
